# audio-to-midi-monophonic

./: .gitignore  LICENSE  README.md  config.py  feature_extractor.py  fileio.py  midi_framework.py  midi_generator.py  pyproject.toml
audiotomidimonophonic/: __init__.py  __main__.py  config.py  feature_extractor.py  feature_utils.py  fileio.py  midi_framework.py  midi_generator.py
